    - LEAFPAD
    - NANO
    - SUBLIME
    - VI
    - VIM
    - VSCODE
    - XED - untested because I couldn't get a version for Ubuntu 21.
    - or a string specifying a command to run, e.g.
          OPTION EDITOR "code -g ${file}:${line}"
      Note that ${file} is replaced by the filename/path to edit "in quotes"
      and ${line} the line number to set the initial cursor position to.
  - Changed LOAD and RUN so that if a filename without a [.bas|.BAS|.Bas]
    extension is not provided then one is automatically appended.
      - unlike other MMBasic ports MMB4L has a case-sensitive file-system
        and expects MMBasic program files to have one of three possible
        extensions: .bas, .BAS, or .Bas.
      - if no extension is specified then MMB4L will check for the existence
        of a file with each extension in order, if no such file is found then
        it assumes the .bas extension.

Version 2022.01.00-a3 - 16-Jan-2022:
  - Added serial port support, e.g.
        OPEN "/dev/ttyS0: 115200" As #1
    this is very preliminary and in need of extensive user testing,
    see README for details.
  - Added XMODEM {SEND|RECEIVE} file$, #fnbr command:
    - #fnbr must first have been OPENed as a serial port.
    - unlike other MMBasic versions, MMB4L cannot use XMODEM to send to or
      receive from the console.
  - Added OPTION CODEPAGE page$ command:
    - causes character bytes in the range 128-255 to be translated to Unicode
      (UTF-8) when printed to the console according to a given code page /
      mapping.
    - supported values of page$ are currently:
      - "NONE"   : no mapping, characters 128-255 are written as-is.
      - "CMM2"   : best effort mapping to the characters of the CMM2 font.
      - "CP437"  : characters 128-255 of the original IBM PC code 437.
                   Note this was a non-ANSI code page which also included
                   characters 1-31 which are not available in this mapping,
                   but see "MMB4L".